--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -2,8 +2,8 @@
 %html
   %head
     %meta{:charset=>"utf-8"}
-    %title Examen 1 
-    %link{:rel=>"stylesheet", :href=>"/admin_style.css"}
+    %title Examen 2 
+    %link{:rel=>"stylesheet", :href=>"/style.css"}
   %body
     %h1 Consola de entregas
     %ul
