--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -9,23 +9,45 @@
     :javascript
       $(function(){
         $(".studentstats").click(function(e){$(e.target).find(".filestats").toggle();});
+        $(".info").click(function(e){$(e.target).siblings(".filestats").toggle();});
         $(".commiter").click(function(e){
           var c = $(e.target).attr("id").split("_")[0];
-          $("a strong").not("[id^='c']").hide();
+          $("a strong").not("[id^='"+c+"']").parents(".studentstats").hide();
         });
+        $("#whatsthis").click(function(){$("#about").toggle()});
       });
   %body
-    %h1 Consola de entregas
+    %h1 Consola de entregas: examen 2, progra 4.
+    %a#whatsthis{:href=>"#"} Qué es esto?
+    #about{:style=>"display:none;"}
+      :markdown
+        Aquí podés tener retroalimentación de los push que hacés al servidor de entregas. 
+        podes dar click en un nombre para filtrar la actividad de esa persona y podés
+        dar click en un rectángulo de actividad para ver los archivos modificados.
+
+        Cada rectángulo de actividad sólo muestra *el último commit* que había
+        al momento del push, así que no te extrañe que parezca que subiste menos cosas:
+        sólo se muestran los últimos cambios que hiciste, no todos los commits.
+
+        Se muestra, sin embargo, el id del commit que se subió, así que podés correr
+        `git log` y revisar los identificadores de commits: si el último de tu log
+        es el último de tu actividad, estás al día.
+
+        Aunque se muestra la actividad de todo mundo, 
+        **no es posible ver qué cambios se hicieron, ni mucho menos acceder a repositorios ajenos**
+        así que no te preocupés.
+
     %ul
       -@messages.each do |message|
-        %li.studentstats 
+        %li.studentstats
           %a{:href=>"#"}
-            %strong.commiter{:id=>"#{message["commiter"]}_#{message["stats"]["id"]}"}= message["commiter"]
+            -@commiter = message["commiter"].gsub(/ <.*>/, '')
+            %strong.commiter{:id=>"#{@commiter}_#{message["stats"]["id"]}"}= @commiter
           subió en 
           %em= DateTime.parse(message["when"]).new_offset(-6.0/24).to_s
           a
           %span.repo= message["repo"]
-          %p.info= "el último commit recibido: #{message["stats"]["id"]}"
+          %p.info= "commit recibido: #{message["stats"]["id"]}"
           %p.info="#{message["stats"]["files"].length} archivos con #{message["stats"]["additions"]} adiciones y #{message["stats"]["deletions"]} borrados: "
           %ul.filestats{:style=>"display:none;"}
             -message["stats"]["files"].each do |filestats|
