--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:charset=>"utf-8"}
-    %title Examen 2 
+    %title Examen 2 | Progra 4 
     %link{:rel=>"stylesheet", :href=>"/style.css"}
     %script{:src=>"https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"}
   
