viendo en orden inverso

--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -38,7 +38,7 @@
         así que no te preocupés.
 
     %ul
-      -@messages.each do |message|
+      -@messages.reverse.each do |message|
         %li.studentstats
           %a{:href=>"#"}
             -@commiter = message["commiter"].gsub(/ <.*>/, '')
