listo para webdev

--- a/views/dashboard.haml
+++ b/views/dashboard.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:charset=>"utf-8"}
     %link{:rel=>"shortcut icon", :href=>"/favicon.ico", :type=>"image/x-icon"}
-    %title Examen 2 | Progra 4 
+    %title Examen 1 | Desarrollo de aplicaciones web 
     %link{:rel=>"stylesheet", :href=>"/style.css"}
     %script{:src=>"https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"}
   
@@ -43,7 +43,7 @@
         $("#total").text(a.length+" participantes");
       });
   %body
-    %h1 Consola de entregas: examen 2, progra 4.
+    %h1 Consola de entregas: examen 1, desarrollo de aplicaciones web
     #general-info
       %a#whatsthis{:href=>"#"} Qué es esto?
       %a#all{:href=>"#"} Ver todos
